# SOFTWARE_DEVELPMENT

./: .gitmodules  README.md
Algorithms/Labs/Week1/: Output
Algorithms/Labs/Week1/lab1/: main.cpp
Algorithms/Labs/Week1/lab2/: main.cpp
Algorithms/Labs/Week2/Lab1/: main.cpp
BASH_SCRIPTING/automated/: automated.sh
CPP/Assignments/A1/: Output  Q1.cpp  Q2.cpp  Q3.cpp  Q4.cpp  Q5.cpp  Q6.cpp  Q7.cpp  Q8.cpp  Q9.cpp  q1  q2  q3  q4  q5  q6  q7
CPP/Assignments/A3/Q1/: CMakeLists.txt
CPP/Assignments/A3/Q2/: CMakeLists.txt
CPP/Assignments/A3/Q3/: CMakeLists.txt
CPP/Assignments/A3/Q4/: CMakeLists.txt
CPP/Assignments/A3/Q5/: CMakeLists.txt
CPP/Assignments/A4/Q1/: CMakeLists.txt
CPP/Assignments/A4/Q2/: CMakeLists.txt
CPP/Assignments/A4/Q3/: CMakeLists.txt
CPP/Assignments/A4/Q4/: CMakeLists.txt
CPP/Assignments/A4/Q5/: CMakeLists.txt
CPP/Assignments/A4/Q6/: CMakeLists.txt
CPP/Assignments/A4/Q8/: CMakeLists.txt
CPP/Assignments/A5/Q1/: CMakeLists.txt
CPP/Assignments/A6/Q1/: CMakeLists.txt
CPP/Assignments/A6/Q2/: CMakeLists.txt
CPP/Assignments/A6/Q3/: CMakeLists.txt
CPP/Assignments/A6/Q4/: CMakeLists.txt
CPP/Assignments/A7/Q1/: CMakeLists.txt
CPP/Assignments/A7/Q2/: CMakeLists.txt
CPP/Assignments/A7/Q3/: CMakeLists.txt
CPP/Assignments/A7/Q4/: CMakeLists.txt
CPP/Assignments/A8/Q1/: CMakeLists.txt
CPP/Assignments/A8/Q2/: CMakeLists.txt
CPP/Assignments/A8/Q3/: CMakeLists.txt
CPP/Assignments/A8/Q4/: CMakeLists.txt
CPP/Assignments/A8/Q5/: CMakeLists.txt
CPP/Assignments/A8/Q6/: CMakeLists.txt
CPP/Assignments/A8/Q7/: CMakeLists.txt
CPP/LABs/Week1/Lab1/: ex1  ex1.cpp  ex2  ex2.cpp
CPP/LABs/Week1/lab2/: ex1  ex1.cpp  ex2  ex2.cpp
CPP/LABs/Week2/Lab1/: ex1  ex1.cpp
CPP/LABs/Week4/Lab1/: Output  animal.cpp
CPP/LABs/Week4/Lab2/: Output  complex.cpp
CPP/LABs/Week5/Lab1/: Output  exeptionHandlingExample.cpp
CPP/LABs/Week6/Lab1/: CMakeLists.txt
CPP/Projects/Sudoku V1/: README.md
CPP/Projects/Sudoku V1/Include/: SudokuBoard.hpp  SudokuGame.hpp  SudokuGenerator.hpp  SudokuSolver.hpp
CPP/Projects/Sudoku V1/Source/: SudokuBoard.cpp  SudokuGame.cpp  SudokuGenerator.cpp  SudokuSolver.cpp  main.cpp
Design Pattern/LABs/Week1/lab1/: main.CPP
Design Pattern/LABs/Week1/lab2/: Output  main.cpp
Design Pattern/Project/Smart Home Automation System/: CMakeLists.txt  README.md
Design Pattern/Project/Smart Home Automation System/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Design Pattern/Project/Smart Home Automation System/GUI/Include/: automatedMode.hpp  command.hpp  deviceFactory.hpp  deviceGroup.hpp  devices.hpp  light.hpp  lightObserver.hpp  observer.hpp  securityCamera.hpp
Design Pattern/Project/Smart Home Automation System/Include/: centralControl.hpp  deviceGroup.hpp  doorLock.hpp  lightState.hpp  motionSensor.hpp  thermostat.hpp
Design Pattern/Project/Smart Home Automation System/Source/: automatedMode.cpp  centralControl.cpp  deviceFactory.cpp  deviceGroup.cpp  doorLock.cpp  light.cpp  lightObserver.cpp  lightState.cpp  main.cpp  motionSensor.cpp  s_command.cpp  securityCamera.cpp  thermostat.cpp
Modern CPP/Assignment/A2/Q1/: Output  main.cpp
Modern CPP/Assignment/A2/Q2/: Output  main.cpp
Modern CPP/LABs/Week3/: main.cpp
Modern CPP/Projects/Airline Management System V1.0/: CMakelists.txt
Modern CPP/Projects/Airline Management System V2.0/: CMakeLists.txt  README.md
Modern CPP/Projects/Airline Management System V2.0/Data/: flights.json  maintenance.json  users.json
Modern CPP/Projects/Airline Management System V2.0/Include/APP/: airlineSystem.hpp
Modern CPP/Projects/Airline Management System V2.0/Include/BookingModule/: bookingHandler.hpp  seat.hpp
Modern CPP/Projects/Airline Management System V2.0/Include/CheckInModule/: boardingPass.hpp
Modern CPP/Projects/Airline Management System V2.0/Include/Flight_AircraftModule/: flightDataHandling.hpp
Modern CPP/Projects/Airline Management System V2.0/Include/UsersModule/: admin.hpp  passengers.hpp
Modern CPP/Projects/Airline Management System V2.0/Source/Application/: airlineSystem.cpp  main.cpp
Modern CPP/Projects/Airline Management System V2.0/Source/BookingModule/: bookingHandler.cpp  payment.cpp
Modern CPP/Projects/Airline Management System V2.0/Source/CheckInModule/: boardingPass.cpp  checkInHandling.cpp
Modern CPP/Projects/Airline Management System V2.0/Source/Flight_AircraftModule/: flightDataHandling.cpp
Modern CPP/Projects/Airline Management System V2.0/Source/UsersModule/: AuthenticationModule.cpp  admin.cpp  bookingAgent.cpp  passengers.cpp  user.cpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/: CMakeLists.txt  README.md
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Include/BookingModule/: bookingHandler.hpp  payment.hpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Include/CheckInModule/: checkInHandling.hpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Include/Flight_AircraftModule/: flightDataHandling.hpp  flights.hpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Include/UsersModule/: AuthenticationModule.hpp  bookingAgent.hpp  passengers.hpp  user.hpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Source/Application/: airlineSystem.cpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Source/BookingModule/: bookingHandler.cpp  reservation.cpp  seat.cpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Source/Flight_AircraftModule/: aircrafts.cpp  flightDataHandling.cpp  flights.cpp  maintenanceHandler.cpp  maintenanceLog.cpp
Modern CPP/Projects/Airline Management System V3.0/Static Lib/Source/UsersModule/: AuthenticationModule.cpp  admin.cpp  bookingAgent.cpp  passengers.cpp  user.cpp
PYTHON/Revision/: test.py
PYTHON/TicTacToe/GAME_UI/: TicTacToe.ipynb  game.py  test.ipynb
QT/: setICon
QT/TESTing/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QT/Test3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QT/Testing2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
(+146 files in other folders)
